# flowers-oss

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
deploy/demo/: Dockerfile  fly.toml  wrapper.py
deploy/launcher/: Dockerfile  fly.toml  launcher.py
docs/: API.md  STATUS.md
flowers/: __init__.py  app.py  broker.py  cli.py  controlplane.py  effects.py  mandate.py  memory.py  policy.py  replies.py  runtime.py  trustgate.py  types.py
flowers/channels/: __init__.py  base.py  inproc.py  web.py
flowers/channels/static/: index.html
flowers/engine/: __init__.py  announcer.py  clarifier.py  executor.py  operator.py  planner.py  scheduler.py  verifier.py
flowers/extras/: __init__.py  sandbox.py  search.py  store.py  telemetry.py
flowers/seams/: __init__.py  browser.py  integrations.py  interfaces.py  model.py  sandbox.py  search.py  store.py  telemetry.py  timers.py
tests/: _harness.py  test_announcer.py  test_app.py  test_arcade_adapter.py  test_broker.py  test_browser_contexts.py  test_browser_seam.py  test_browser_verification.py  test_channels.py  test_clarifier.py  test_cli.py  test_connect.py  test_constraint_gate.py  test_controlplane.py  test_disallowed_content.py  test_discipline.py  test_e2e.py  test_effects.py  test_escalation_intents.py  test_executor.py  test_fastpath.py  test_gmail_organize.py  test_idempotency.py  test_integrations.py  test_mandate.py  test_mandate_broker.py  test_mandate_operator.py  test_model.py  test_money_refused.py  test_observe_then_act.py  test_operator.py  test_owner_grant_preview.py  test_p2_effectiveness.py  test_p3_m5_review_fixes.py  test_p3_review_fixes.py  test_p3_staleness.py  test_p4_audit_fixes.py  test_planner.py  test_policy.py  test_postgres_store.py  (+22 more)
tests/ux/: conftest.py  harness.py  invariants.py  test_scenarios.py
