[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "flowers"
version = "0.1.0"
description = "A trustable agent with a deterministic, no-LLM verification gate."
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = []
keywords = ["agent", "llm", "ai-agents", "verification", "trust", "deterministic"]
# no License:: classifier — the PEP 639 `license` expression above covers it, and setuptools>=77
# deprecates mixing the two.
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Aspect-Research/flowers-oss"
Issues = "https://github.com/Aspect-Research/flowers-oss/issues"

[project.scripts]
flowers = "flowers.cli:main"

# Optional, environment-specific bindings. The core (engine + trust gate) depends on nothing but
# the stdlib + sqlite3 so the offline test suite never needs the network. Real adapters live behind
# seams and are pulled in only by the relevant extra; the offline suite uses in-repo fakes.
[project.optional-dependencies]
web = ["starlette>=0.37", "uvicorn>=0.30"]
arcade = ["arcadepy>=1.10"]      # live ArcadeIntegrations (per-user Gmail send + Google Calendar)
postgres = ["psycopg[binary,pool]>=3.2"]   # optional flowers/extras/ PostgresStore
browser = ["playwright>=1.40"]   # drive Browserbase cloud sessions over CDP (no local browser download)
e2b = ["e2b>=1.0"]               # optional flowers/extras/ E2BSandbox (Firecracker microVM)
dev = ["pytest>=8", "ruff>=0.5", "httpx>=0.27"]   # httpx backs starlette.testclient (the web tests)
all = ["flowers[web,arcade,postgres,browser,e2b,dev]"]

[tool.setuptools.packages.find]
include = ["flowers*"]

# The dashboard is a static asset inside the package (flowers/channels/static/index.html), loaded at
# request time via importlib.resources — it must ship in both the wheel and the sdist.
[tool.setuptools.package-data]
"flowers.channels" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "live: opt-in live-adapter test — collected only under FLOWERS_LIVE=1; run via `FLOWERS_LIVE=1 pytest -m live`",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # long lines tolerated in docstrings/data tables
